Use Class.getConstructor().newInstance() instead of Class.newInstance directly.